
Version 0.276.104 BETA:
	OSD additions
	Angle Lock mode

Version 0.277.107 BETA:
	Changed how sml_board_rot works:
		for sml_board_rot to work you need to set gyro_rotation to 0
		set these numbers based on the orientation of the board as it sits on the level frame in 1 degree increments
			set gyro_rotation=0
			set man_gy_pitch_angle=-360 through 360 (pitching up is positive, down is negative, 0, 360 and -360 are the same point, a board upright and level with the horizon is 0)
			set man_gy_roll_angle=-360 through 360 (rolling right is positive, left is negative, 0, 360 and -360 are the same point, a board upright and level with the horizon is 0)
			set man_gy_yaw_angle=-360 through 360 (yawing right is positive, left is negative, 0, 360 and -360 are the same point, a board facing directly foward in relation to direction of travel is 0)
	Allow dds and ds motor idling
		digital idle happens at 1KHz

Version 0.277.107 ALPHA through 294.109 ALPHA:
	Code Cleanup
	OSD Changes
	F7 Changes
	F4 Changes
	flight code changes
	defaults changes

Version 295.110 BETA:
	Update defaults
	Minor OSD change

Version 296.110 BETA:
	Fix self leveling
	Fix minor rearm bug

Version 297.110 BETA:
	Correct dshot frequency

Version 298.110 BETA:
	Increment version
	Git force pull

Version 299.110 BETA:
	Increment version
	Git force pull

Version 300.110 RC18:
	Prevent 1wire auto hardfault
	testmotors function only spins one motor at a time now

Version 0.302.114 BETA:
	Added profile support

Version 0.303.114 BETA
	Fix minor drift issue
	Improve spin stopper

Version 0.304.115 BETA
	Fix minor drift issue caused by profile changes to mixer

Version 0.305.115 BETA
	Revise deadband to be smoother
	Inverse logged pitch output
	Fix hot motor issue some people are having

Version 0.306.115 BETA
	Fix profiling switching hang

#Features in current development:
#	MAVlink compatibility

#Features for future development:
#	transponder output
#	Sonar input
#	GPS input
#	Unobtanium detector