@@ -1283,6 +1283,7 @@ Version 0.305.115 BETA
 
 Version 0.306.115 BETA
 	Fix profiling switching hang
+	Fix profile 3 not working
 
 #Features in current development:
 #	MAVlink compatibility
